add assignment-1 BEM

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             <td><a href="https://github.com/Nis13/LF_Assignments">Code</a></td>
             <td><a href="https://nis13.github.io/LF_Assignments/">Host</a></td>
         </tr>
+        <tr>
+            <td>Assignment 1- BEM</td>
+            <td>HTML/CSS</td>
+            <td><a href="https://github.com/Nis13/LF_Assignments/tree/assignment-2_BEM">Code</a></td>
+            <td><a href="https://nis13.github.io/LF_Assignments/">Host</a></td>
+        </tr>
     </table>
     
 
