--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <td><a href="https://github.com/Nis13/LF_Assignments/tree/assignment-2_BEM">Code</a></td>
             <td><a href="https://nis13.github.io/LF_Assignments/">Host</a></td>
         </tr>
+        <tr>
+            <td>Assignment 2</td>
+            <td>HTML/CSS</td>
+            <td><a href="https://github.com/Nis13/LF_Assignment-2">Code</a></td>
+            <td><a href="https://nis13.github.io/LF_Assignment-2/">Host</a></td>
+        </tr>
     </table>
     
 
