--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <td><a href="https://github.com/Nis13/LF_Assignment-2">Code</a></td>
             <td><a href="https://nis13.github.io/LF_Assignment-2/">Host</a></td>
         </tr>
+        <tr>
+            <td>Assignment 3- Box Collision</td>
+            <td>Javascript</td>
+            <td><a href="https://github.com/Nis13/Box-Collision">Code</a></td>
+            <td><a href=" https://nis13.github.io/Box-Collision/">Host</a></td>
+        </tr>
     </table>
     
 
