adds car lane game

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <td><a href="https://github.com/Nis13/ImageCarousel">Code</a></td>
             <td><a href="https://nis13.github.io/ImageCarousel/">Host</a></td>
         </tr>
+        <tr>
+            <td>Assignment 5- Car Lane Game</td>
+            <td>Typescript</td>
+            <td><a href="https://github.com/Nis13/CarLane_game">Code</a></td>
+            <td><a href="https://nis13.github.io/CarLane_game/">Host</a></td>
+        </tr>
     </table>
     
 
