--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td><a href=" https://nis13.github.io/Box-Collision/">Host</a></td>
         </tr>
         <tr>
-            <td>Assignment 4- Box Collision</td>
+            <td>Assignment 4- Image Carousel</td>
             <td>Typescript</td>
             <td><a href="https://github.com/Nis13/ImageCarousel">Code</a></td>
             <td><a href="https://nis13.github.io/ImageCarousel/">Host</a></td>
