adds major project

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             <td><a href="https://github.com/Nis13/Doodle-Jump-Game">Code</a></td>
             <td><a href="https://nis13.github.io/Doodle-Jump-Game/">Host</a></td>
         </tr>
+        <tr>
+            <td>Minor Project - Frog Tsunami</td>
+            <td>Canvas,Typescript</td>
+            <td><a href="https://github.com/Nis13/FrogTsunami">Code</a></td>
+            <td><a href="https://nis13.github.io/FrogTsunami/">Host</a></td>
+        </tr>
+        
     </table>
     
 
