adds database assignment

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             <td><a href="https://github.com/Nis13/FrogTsunami">Code</a></td>
             <td><a href="https://nis13.github.io/FrogTsunami/">Host</a></td>
         </tr>
+        <tr>
+            <td>Database-Assignments</td>
+            <td>postgresql</td>
+            <td><a href="https://github.com/Nis13/Database-Assignments">Code</a></td>
+            <td>N/A</td>
+        </tr>
         
     </table>
     
