adds database assignment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
             <td><a href="https://nis13.github.io/FrogTsunami/">Host</a></td>
         </tr>
         <tr>
-            <td>Database-Assignments</td>
+            <td>Database-Assignments -1</td>
+            <td>postgresql</td>
+            <td><a href="https://github.com/Nis13/Database-Assignments">Code</a></td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Database-Assignments -2</td>
             <td>postgresql</td>
             <td><a href="https://github.com/Nis13/Database-Assignments">Code</a></td>
             <td>N/A</td>
