adds node assignment -3

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             <td><a href="https://github.com/Nis13/To-Do-assignment" target="_blank">Code</a></td>
             <td>N/A</td>
         </tr>
+        <tr>
+            <td>Nodejs-Assignment -2</td>
+            <td>nodejs</td>
+            <td><a href="https://github.com/Nis13/TODO-App/tree/main" target="_blank">Code</a></td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Nodejs-Assignment -3</td>
+            <td>nodejs</td>
+            <td><a href="https://github.com/Nis13/TODO-App/tree/feature/authorize" target="_blank">Code</a></td>
+            <td>N/A</td>
+        </tr>
+
         
     </table>
     
