adds nodejs assignment-6

--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@
             <td><a href="https://github.com/Nis13/TODO-App/tree/feature/testing" target="_blank">Code</a></td>
             <td>N/A</td>
         </tr>
-
-        
+        <tr>
+            <td>Nodejs-Assignment -6</td>
+            <td>nodejs</td>
+            <td><a href="https://github.com/Nis13/TODO-App/tree/feature/migration_seed" target="_blank">Code</a></td>
+            <td>N/A</td>
+        </tr>  
     </table>
     
 
